Minor enhancements: Modifies CSS to reduce overlaying of elements in Files area, fixes alignment, table layout and adds more space in front of file/folder names so it's easer to select them.

--- a/structr-app/src/main/resources/structr/css/files.css
+++ b/structr-app/src/main/resources/structr/css/files.css
@@ -133,7 +133,7 @@
 
 #files-table th[data-icon-col]     { width: 16px; }
 #files-table th.with-search-icon[data-icon-col] { width: 40px; }
-#files-table th[data-name-col]     { width: calc(100% - (24px + 3rem + 5% + 14rem + 14rem + 5% + 10% + 10%)); }
+#files-table th[data-name-col]     { width: calc(100% - (24px + 3rem + 5% + 14rem + 14rem + 5% + 10% + 10%)); padding-left: 2rem; }
 #files-table th[data-export-col]   { width: 3rem; }
 #files-table th[data-uuid-col]     { width: 5%; }
 #files-table th[data-created-col]  { width: 12rem; }
@@ -175,7 +175,6 @@
 }
 
 #files-table {
-	table-layout: fixed;
 	margin-bottom: 1rem;
 }
 
@@ -197,13 +196,19 @@
 
 #files-table th:first-of-type,
 #files-table td:first-of-type {
-    padding-left: 1rem;
+    padding-left: .5rem;
+	padding-right: .5rem;
 }
 #files-table th,
 #files-table td {
 	padding-right: 1.5rem;
 }
 
+#files-table input.new-name {
+	margin-left: 2rem;
+	padding: 0;
+	width: 100%;
+}
 
 #files-table tbody tr td .editable {
 	min-width: 100px;
